--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,5 @@
 		"nwidart/laravel-modules" : "^1.27"
 	},
 	"license" : "Apache-2.0",
-	"minimum-stability" : "dev"
+	"minimum-stability" : "stable"
 }
