Composer minimimum stability issue

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
 			"createmodulewiserepo\\repo\\" : "src"
 		}
 	},
-	"license" : "Apache-2.0"
+	"license" : "Apache-2.0",
+	"minimum-stability" : "dev",
+	"prefer-stable" : true
 }
