--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,5 @@
 			"createmodulewiserepo\\repo\\" : "src"
 		}
 	},
-	"license" : "Apache-2.0",
-	"minimum-stability" : "dev",
-	"prefer-stable" : true
+	"license" : "Apache-2.0"
 }
